--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,10 @@
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
+  <depend>haya_imu_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
+
   <export>
     <build_type>ament_cargo</build_type>
   </export>
